--- a/main.html
+++ b/main.html
@@ -7,9 +7,23 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<thead>
+		<tr>
+			<td>Structure</td>
+		    <td>Description</td>
+		</tr>
+			</thead>
+		<tbody>
+			<tr>
+			<td>Columns</td>
+			<td>Two columns with headings "Roll number" and "Name"</td>
+			</tr>
+			<tr>
+			<td>Rows</td>
+			<td>At least two rows containing roll numbers and corresponding names</td>
+			</tr>
+		</tbody>
+
 
 </body>
 
