--- a/main.html
+++ b/main.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<thead>
-		<tr>
-			<td>Structure</td>
-		    <td>Description</td>
-		</tr>
-			</thead>
-		<tbody>
-			<tr>
-			<td>Columns</td>
-			<td>Two columns with headings "Roll number" and "Name"</td>
-			</tr>
-			<tr>
-			<td>Rows</td>
-			<td>At least two rows containing roll numbers and corresponding names</td>
-			</tr>
-		</tbody>
-
-
+    <table>
+        <thead>
+            <tr>
+                <th>Structure</th>
+                <th>Description</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Columns</td>
+                <td>Two columns with headings "Roll number" and "Name"</td>
+            </tr>
+            <tr>
+                <td>Rows</td>
+                <td>At least two rows containing roll numbers and corresponding names</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
+</html>
 
 </html>
